tourist_agency_project/src/main/java/com/example/demo/error/PasswordMismatchException.java
package com.example.demo.error;

import org.apache.coyote.BadRequestException;

public class PasswordMismatchException extends BadRequestException {
    public PasswordMismatchException(String message)  {
        super(message);
    }
}
